[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
chrono = "0.4.25"
mongodb = "2.5.0"
sqlx = {version="0.6.3", features = [ "runtime-tokio-native-tls", "postgres", "mysql" ]}
serde = {version="1.0.163", features=["derive"]}
